--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Klient och server</title>
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="https://wt1uppg1.netlify.app/">
 </head>
 
 <body>
