--- a/Page3.html
+++ b/Page3.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bf3">
   <h1>CSS</h1>  
-  <img src="Bilder/idvsclass.jpg" alt="class" width="400" height="200">
+  <img src="idvsclass.jpg" alt="class" width="400" height="200">
   <h2>Vad är en regel i CSS och vad består den av?</h3>
     <p>En CSS-regel allmänt känd som en stilregel är en instruktion som talar om för webbläsaren hur man presenterar ett element på en webbsida. Den består av.<b><i>selektorer</i></b> och ett <b><i>deklarationsblock</i></b>.
     </p>
