--- a/Page2.html
+++ b/Page2.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bf2">
    <h1 id="bb2"> HTML</h1> 
-   <img src="Bilder/sddefault.jpg" alt="tagg" width="400" height="200">
+   <img src="sddefault.jpg" alt="tagg" width="400" height="200">
    <section id="box1"> 
    <h2>Beskriv vad element är.</h2>
    <p class="speciel"> 
