--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1 id="bb1">Datakommunikation och webbadresser</h1>
-    <img src="Bilder/Client-server-model.svg.png" alt="client" width="400" height="200">
+    <img src="Client-server-model.svg.png" alt="client" width="400" height="200">
     <h2>Vad avses med termerna klient och server?</h2>
     <p><b><i>Klient</i></b> kan vara allt från Firefox, Safari och Google Chrome. <b><i>Servern</i></b> är datorer fyllda med information. Klient och servern fungerar genom att klienten skriver in en webbadress (även kallad för URL) på webbläsaren. Därefter skickas signaler genom internet till servern, som är en lagringsplats fylld av webbplatser. Servern skickar sedan tillgång till webbadressen som klienten har begärt.</p>
 
