--- a/Page2.html
+++ b/Page2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Element, tagg och attribut</title>
-    <link rel="stylesheet" href="https://wt1uppg1.netlify.app/">
+    <link rel="stylesheet" href="https://wt1uppg1.netlify.app/style.css">
 </head>
 <body class="bf2">
    <h1 id="bb2"> HTML</h1> 
