--- a/Page3.html
+++ b/Page3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Id och class</title>
-    <link rel="stylesheet" href="https://wt1uppg1.netlify.app/">    
+    <link rel="stylesheet" href="https://wt1uppg1.netlify.app/style.css">    
 </head>
 <body class="bf3">
   <h1>CSS</h1>  
